--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1f1f1f" />
     <meta name="title" content="Mantis React Dashboard | Open Source Admin Template" />
@@ -49,7 +49,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>Aki Predict Dashboard</title>
+    <title>AKI Diagnostic Support</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap&family=Public+Sans:wght@400;500;600;700"
