--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1f1f1f" />
-    <meta name="title" content="Mantis React Dashboard | Open Source Admin Template" />
+    <meta name="title" content="Aki Diagnostic Support" />
     <meta
       name="description"
       content="Mantis is a free, super flexible and customizable react redux dashboard template built using MUI React components with open source MIT license."
@@ -22,23 +22,13 @@
     <meta property="og:url" content="https://mantisdashboard.io/" />
     <meta property="og:site_name" content="mantisdashboard.io" />
     <meta property="article:publisher" content="https://www.facebook.com/codedthemes" />
-    <meta property="og:title" content="Mantis React Dashboard | Open Source Admin Template" />
+    <meta property="og:title" content="Aki Diagnostic Support" />
     <meta
       property="og:description"
       content="Mantis is a free, super flexible and customizable react redux dashboard template built using MUI React components with open source MIT license."
     />
-    <meta property="og:image" content="https://mantisdashboard.io/adv-banner-images/og-social.png" />
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://mantisdashboard.io" />
-    <meta property="twitter:title" content="Mantis React Dashboard | Open Source Admin Template" />
-    <meta
-      property="twitter:description"
-      content="Mantis is a free, super flexible and customizable react redux dashboard template built using MUI React components with open source MIT license."
-    />
-    <meta property="twitter:image" content="https://mantisdashboard.io/adv-banner-images/og-social.png" />
-    <meta name="twitter:creator" content="@codedthemes" />
-
+    
+    
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
