meta description 수정
<meta name="description" content="It utilizes diagnostic codes and blood test results to predict the occurrence of AKI (Acute Kidney Injury)." />

템플릿 라이선스 관련 부분을 aki 설명 부분으로 대체

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1f1f1f" />
     <meta name="title" content="Aki Diagnostic Support" />
-    <meta name="description" content="Mantis is a free, super flexible and customizable react redux dashboard template built using MUI React components with open source MIT license." />
+    <meta name="description" content="It utilizes diagnostic codes and blood test results to predict the occurrence of AKI (Acute Kidney Injury)." />
     <meta name="keywords" content="react dashboard, react admin, react redux dashboard, ant design template, saas admin, free react dashboard" />
     <meta name="author" content="CodedThemes" />
     
@@ -15,14 +15,14 @@
     <meta property="og:url" content="https://mantisdashboard.io/" />
     <meta property="og:site_name" content="mantisdashboard.io" />
     <meta property="og:title" content="Aki Diagnostic Support" />
-    <meta property="og:description" content="Mantis is a free, super flexible and customizable react redux dashboard template built using MUI React components with open source MIT license." />
+    <meta name="description" content="It utilizes diagnostic codes and blood test results to predict the occurrence of AKI (Acute Kidney Injury)." />
     <meta property="og:image" content="%PUBLIC_URL%/overview_image.webp" />
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://mantisdashboard.io" />
     <meta property="twitter:title" content="Aki Diagnostic Support" />
-    <meta property="twitter:description" content="Mantis is a free, super flexible and customizable react redux dashboard template built using MUI React components with open source MIT license." />
+    <meta name="description" content="It utilizes diagnostic codes and blood test results to predict the occurrence of AKI (Acute Kidney Injury)." />
     <meta property="twitter:image" content="%PUBLIC_URL%/overview_image.webp" />
     <meta name="twitter:creator" content="@codedthemes" />
 
