meta description 재수정
속성값 미변경으로 인해 템플릿 소개가 나와서, 속성 원복후 다시 수정

--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,14 @@
     <meta property="og:url" content="https://mantisdashboard.io/" />
     <meta property="og:site_name" content="mantisdashboard.io" />
     <meta property="og:title" content="Aki Diagnostic Support" />
-    <meta name="description" content="It utilizes diagnostic codes and blood test results to predict the occurrence of AKI (Acute Kidney Injury)." />
+    <meta property="og:description" content="It utilizes diagnostic codes and blood test results to predict the occurrence of AKI (Acute Kidney Injury)" />
     <meta property="og:image" content="%PUBLIC_URL%/overview_image.webp" />
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://mantisdashboard.io" />
     <meta property="twitter:title" content="Aki Diagnostic Support" />
-    <meta name="description" content="It utilizes diagnostic codes and blood test results to predict the occurrence of AKI (Acute Kidney Injury)." />
+    <meta property="twitter:description" content="It utilizes diagnostic codes and blood test results to predict the occurrence of AKI (Acute Kidney Injury)" />
     <meta property="twitter:image" content="%PUBLIC_URL%/overview_image.webp" />
     <meta name="twitter:creator" content="@codedthemes" />
 
