--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
     <meta name="keywords" content="AKI, Acute Kidney Injury, diagnostic codes, blood test, medical prediction" />
     <meta name="author" content="YourOrganization" />
 
+    <meta property="og:url" content="aki.amm.kr" />
+    <meta property="og:title" content="Aki Diagnostic Support" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="%PUBLIC_URL%/overview_image.webp" />
+    <meta property="og:description" content="It utilizes diagnostic codes and blood test results to predict the occurrence of AKI (Acute Kidney Injury)." />
+
     <!-- Open Graph / Facebook -->
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
